@@ -83,7 +83,7 @@ useBios         0
 biosFile        none
 
 # Filter to use. 0=no filter, 1=TV Mode, 2=2xSaI, 3=Super 2xSaI, 4=Super Eagle
-# 5=Pixelate, 6=Motion Blur, 7=AdvanceMAME Scale2x
+# 5=Pixelate, 6=Motion Blur, 7=AdvanceMAME Scale2x, 8=Simple 2x
 filter          0
 
 # Disable status messages. 0=false, any other value means true
@@ -141,3 +141,7 @@ saveType        0
 # 0=64K Flash, 1=128K Flash
 
 flashSize       0
+
+# Sound volume
+# 0=1x, 1=2x, 2=3x, 3=4x
+soundVolume     0
