@@ -126,6 +126,10 @@ struct {
   { "OptionsSoundEcho", ID_OPTIONS_SOUND_ECHO },
   { "OptionsSoundLowPassFilter", ID_OPTIONS_SOUND_LOWPASSFILTER },
   { "OptionsSoundReverseStereo", ID_OPTIONS_SOUND_REVERSESTEREO },
+  { "OptionsSoundVolume1x", ID_OPTIONS_SOUND_VOLUME_1X },
+  { "OptionsSoundVolume2x", ID_OPTIONS_SOUND_VOLUME_2X },
+  { "OptionsSoundVolume3x", ID_OPTIONS_SOUND_VOLUME_3X },
+  { "OptionsSoundVolume4x", ID_OPTIONS_SOUND_VOLUME_4X },  
   { "OptionsGameboyColors", ID_OPTIONS_GAMEBOY_COLORS },
   { "OptionsFilterNormal", ID_OPTIONS_FILTER_NORMAL },
   { "OptionsFilterTVMode", ID_OPTIONS_FILTER_TVMODE },
