@@ -1327,6 +1327,18 @@ BEGIN
             MENUITEM "11 &Khz",                     ID_OPTIONS_SOUND_11KHZ
             MENUITEM "22 K&hz",                     ID_OPTIONS_SOUND_22KHZ
             MENUITEM "44 Kh&z",                     ID_OPTIONS_SOUND_44KHZ
+            MENUITEM SEPARATOR
+            POPUP "&Volume"
+            BEGIN
+                MENUITEM "&1x",                         ID_OPTIONS_SOUND_VOLUME_1X
+
+                MENUITEM "&2x",                         ID_OPTIONS_SOUND_VOLUME_2X
+
+                MENUITEM "&3x",                         ID_OPTIONS_SOUND_VOLUME_3X
+
+                MENUITEM "&4x",                         ID_OPTIONS_SOUND_VOLUME_4X
+
+            END
         END
         POPUP "&Gameboy"
         BEGIN
